--- a/index.html
+++ b/index.html
@@ -132,6 +132,16 @@
     </script>
 
     <style>
+    *{
+        font-size: 4em;
+    }
+    .startButton {
+        width: 50%;
+        margin-right: 4%;
+        font-size: 4em;
+        padding: 10px 0;
+      }
+
       .choice-button {
         width: 48%;
         margin-right: 4%;
