--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       .choice-button {
         width: 48%;
         margin-right: 4%;
-        font-size: 4em;
+        font-size: 20px;
         padding: 10px 0;
         display: none; /* 最初は非表示に設定 */
       }
