--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </style>
   </head>
   <body>
-    <h1>中国語統一試験一問一答</h1>
+    <h1>中国語 一問一答(統一試験用)</h1>
     <h1><div id="pinyin"></div></h1>
     <button id="startButton" onclick="showChoices()">問題を表示</button>
     <!-- 問題を表示するボタン -->
